--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "mongodb": "^5.9.2",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
